# mattermost-forgejo-devin

./: .env.example  .gitignore  README.md  mattermost_forgejo_oauth_bridge2.py  pyproject.toml
.SourceSageAssets/COMMIT_CRAFT/STAGE_INFO/: STAGE_INFO_AND_ISSUES_AND_PROMT.md  STAGE_INFO_AND_PROMT.md  STAGE_INFO_AND_PROMT_EMOJI.md  STAGE_INFO_AND_PROMT_GAIAH.md  STAGE_INFO_AND_PROMT_GAIAH_B.md
.SourceSageAssets/DOCUMIND/: Repository_summary.md
example/: README.md
example/bidirectional_bridge/: .env.example  mattermost_forgejo_bidirectional_bridge.py
example/enhanced_bridge/: .env.example  Dockerfile  README.md  docker-compose.yml  mattermost_forgejo_enhanced_bridge.py  requirements.txt
example/issue_creator/: .env.example  mattermost_forgejo_issue_creator.py
example/oauth_bridge/: .env.example  mattermost_forgejo_oauth_bridge.py
