[project]
name = "mattermost-forgejo-devin"
version = "0.1.0"
description = "Self-hosted AI dev assistant with Mattermost & Forgejo integration"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "flask>=2.3.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []